# api-platform

./: '  .gitignore  CHANGELOG.md  README.md  apigee_client.py  azure-pipelines.yml  base.tf  main.tf  pyproject.toml  service.tf  spec_uploader.py
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: continous-integration.yaml  tag.yaml
environments/: internal-dev.tfvars  internal-qa-sandbox.tfvars  internal-qa.tfvars
modules/service/: main.tf
terraform/: main.tf  variables.tf
